# mailtx

./: .gitignore  README.md  main.py  pyproject.toml
src/mailtx/: db.py  embed.py  extractor.py  ingest.py  ledger.py  parser.py  query_engine.py
