[project]
name = "mailtx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "google-api-python-client>=2.187.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.2.3",
    "numpy>=2.3.5",
    "ollama>=0.6.1",
    "python-dateutil>=2.9.0.post0",
]
